# crownfi-sei-swaps

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: push-to-website-repo.yml
artifacts/: atlantic-2.json  checksums.txt  checksums_intermediate.txt
contracts/crownfi-astro-factory/: Cargo.toml
contracts/crownfi-astro-factory/examples/: factory_schema.rs
contracts/crownfi-astro-factory/src/: contract.rs  migration.rs  mock_querier.rs  querier.rs  state.rs  testing.rs
contracts/crownfi-astro-factory/tests/: factory_helper.rs  integration.rs
contracts/crownfi-astro-pair/: Cargo.toml
contracts/crownfi-astro-pair/examples/: pair_schema.rs
contracts/crownfi-astro-pair/src/: contract.rs  error.rs  migration.rs  mock_querier.rs  state.rs  testing.rs
contracts/crownfi-astro-pair/tests/: integration.rs
contracts/crownfi-astro-router/: Cargo.toml
contracts/crownfi-astro-router/examples/: router_schema.rs
contracts/crownfi-astro-router/src/: contract.rs  operations.rs
contracts/crownfi-astro-router/src/testing/: mock_querier.rs  tests.rs
contracts/crownfi-astro-router/tests/: factory_helper.rs  router_integration.rs
contracts/crownfi-astro-token/: Cargo.toml
contracts/crownfi-astro-token/examples/: token_schema.rs
contracts/crownfi-astro-token/src/: contract.rs
contracts/crownfi-cw20-wrapper/: Cargo.toml
contracts/crownfi-cw20-wrapper/src/: error.rs  lib.rs  msg.rs
contracts/crownfi-erc20-wrapper/: Cargo.toml
contracts/crownfi-erc20-wrapper/src/: error.rs  lib.rs  msg.rs
contracts/crownfi-pool-factory/: Cargo.toml
contracts/crownfi-pool-factory/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/crownfi-pool-pair/: Cargo.toml
contracts/crownfi-pool-pair/src/: attributes.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs  workarounds.rs
contracts/crownfi-pool-pair/src/contract/: pool.rs  shares.rs
contracts/crownfi-pool-pair/src/tests/: instantiate.rs  mod.rs
contracts/crownfi-pool-pair/src/tests/execute/: mod.rs  provide_liquidity.rs  swap.rs  update_config.rs  withdraw_and_split_liquidity.rs  withdraw_liquidity.rs
contracts/crownfi-pool-pair/src/tests/query/: basic_queries.rs  exchange_rate.rs  mod.rs  share_value.rs  simulate_naive_swap.rs  simulate_provide_liquidity.rs  simulate_swap.rs  total_shares.rs  volume.rs
contracts/crownfi-swap-router/: Cargo.toml
contracts/crownfi-swap-router/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/crownfi-token-wrapper/: Cargo.toml
contracts/crownfi-token-wrapper/src/: lib.rs
contracts/factory/src/: contract.rs  migration.rs  mock_querier.rs  testing.rs
contracts/factory/tests/: factory_helper.rs  integration.rs
contracts/pair/: Cargo.toml
contracts/pair/examples/: pair_schema.rs
contracts/pair/src/: contract.rs  mock_querier.rs  testing.rs
contracts/pair/tests/: integration.rs
contracts/pair_stable/: Cargo.toml
contracts/pair_stable/examples/: pair_stable_schema.rs
contracts/pair_stable/src/: migration.rs  mock_querier.rs
contracts/pair_stable/tests/: integration.rs
contracts/periphery/oracle/: Cargo.toml
contracts/periphery/oracle/tests/: integration.rs
contracts/router/examples/: router_schema.rs
contracts/router/src/: contract.rs  operations.rs
contracts/router/src/testing/: mock_querier.rs  tests.rs
contracts/router/tests/: factory_helper.rs  router_integration.rs
frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/css/: main.css
frontend/src/styling/: backgrounds.css  common.css  covers.css  heading.css  main.css
frontend/src/styling/components/: farm.css  index.css  swap.css
frontend/src/styling/input/: buttons.css  index.css
frontend/src/styling/modals/: error.css  index.css  trade.css  wallets.css
frontend/src/ts/: entrypoint.ts  main.ts  main_template.html  types.ts  util.ts  wallet-env.ts
frontend/src/ts/chain_config/: atlantic-2.ts  index.ts  localsei.ts
frontend/src/ts/components/farm/: autogen.ts  index.ts  template.html
frontend/src/ts/components/swap/: autogen.ts  index.ts  template.html
frontend/src/ts/contract_schema/factory/: instantiate.ts  migrate.ts  query.ts
frontend/src/ts/contract_schema/factory/responses/: blacklisted_pair_types.ts  config.ts  fee_info.ts  pair.ts
frontend/src/ts/contract_schema/pair/: query.ts
frontend/src/ts/contract_schema/pair/responses/: cumulative_prices.ts  query_compute_d.ts  reverse_simulation.ts
frontend/src/ts/contract_schema/pair_stable/: execute.ts
frontend/src/ts/contract_schema/pair_stable/responses/: asset_balance_at.ts  config.ts
frontend/src/ts/contract_schema/periphery/: instantiate.ts  query.ts
frontend/src/ts/contract_schema/router/: query.ts
frontend/src/ts/contract_schema/router/responses/: config.ts  simulate_swap_operations.ts
frontend/src/ts/contract_schema/token/: instantiate.ts  query.ts
frontend/src/ts/contract_schema/token/responses/: all_accounts.ts  all_allowances.ts  (+3 more)
frontend/src/ts/csswap-mvp/: actions.ts  index.ts  loading.ts  main_template.html  util.ts  wallet-env.ts
frontend/src/ts/csswap-mvp/chain_config/: atlantic-2.ts  index.ts  localsei.ts
frontend/src/ts/csswap-mvp/generic_popup/: template.html
frontend/src/ts/csswap-mvp/popups/: _autogen.ts  error.ts  index.ts  template.html  tx_confirm.ts
frontend/src/ts/csswap-mvp/wallet_chooser/: _autogen.ts  index.ts  network_selector.ts  template.html  wallet_button.ts  wallet_modal.ts
scripts/: build.sh  build_optimizer.sh  build_schema.sh  check_artifacts_size.sh  deploy_contracts.ts  deploy_core.ts  deploy_pools.ts  deploy_token.ts  deploy_token_tokenfactory.ts  helpers.ts  package-lock.json  package.json  sdk_codegen.sh  tsconfig.json  update_frontend_config.sh  update_frontend_schema.ts
scripts/chain_configs/: atlantic-2.json  localsei.json  testnet.env
scripts/optimizer_workarounds/: entrypoint.sh
scripts/tests/: cw20_wrapper.ts  erc20_wrapper.ts  token_wrapper.ts
scripts/types.d/: astroport_deploy_interfaces.ts  chain_configs.ts  seid_keys_output.ts
(+31 files in other folders)
