[workspace]
resolver = "2"
members = [
  "packages/cargo/*",
  # Because the "CosmWasm/rust-optimizer" script is hard coded for contracts to be here
  "contracts/*"
]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
strip = true
