[workspace]
resolver = "2"
members = [
  "packages/cargo/*",
  # Because the "CosmWasm/rust-optimizer" script is hard coded for contracts to be here
  "contracts/*"
]

[workspace.dependencies]

# Contracts/Generic
cw-utils = "1"
cw2 = "1"
cw20 = "1"
cw20-base = "1"
cosmwasm-std = {version = "1"}
cw-storage-plus = "1"
cosmwasm-schema = "1"
thiserror = "1"
borsh = "0.10"
itertools = "0.12"
serde = "1"
crownfi-sei-sdk-autogen = { git = "ssh://git@github.com/Crownfi/crownfi-sei-common.git", branch = "main" }

# Potential future
#sei-cosmwasm = "0.4"
#crownfi-cw-common = { git = "ssh://git@github.com/Crownfi/crownfi-sei-common.git", branch = "main" }

# Potentially deprecated
uint = "0.9" # cosmwasm-std already provides U256/U512 types?
integer-sqrt = "0.1" # cosmwasm-std already provides this?


# CLI tools
bpaf = "0.9"
color-eyre = "0.6" 

# Testing stuff
cw-multi-test = "0.20"
anyhow = "1"
prost = "0.12"

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
strip = true
