[workspace]
resolver = "2"
members = [
  "packages/cargo/*",
  # Because the "CosmWasm/rust-optimizer" script is hard coded for contracts to be here
  "contracts/*"
]

[workspace.dependencies]

# Contracts/Generic


thiserror = "1"
borsh = "1.3.1"
itertools = "0.12"
serde = "1"
schemars = "0.8"
bitflags = {version = "2.4", features = ["serde", "bytemuck"]}
bytemuck = {version = "1", features = ["derive", "min_const_generics"]}
cosmwasm-std = {version = "1.5.3"} # DO NOT update to 2.0 unless sei-cosmwasm and crownfi-cw-common are also updated!!
cw20 = "1.1.2"
cw20-base = "1.1.2"
cw-utils = "1.0.3" # DO NOT update to 2.0 unless sei-cosmwasm and crownfi-cw-common are also updated!!
cw2 = "1.1.2" # DO NOT update to 2.0 unless sei-cosmwasm and crownfi-cw-common are also updated!!
cw-storage-plus = "1.2.0" # DO NOT update to 2.0 unless sei-cosmwasm and crownfi-cw-common are also updated!!
cosmwasm-schema = "1.5.3" # DO NOT update to 2.0 unless sei-cosmwasm and crownfi-cw-common are also updated!!
crownfi-sei-sdk-autogen = { git = "ssh://git@github.com/Crownfi/crownfi-sei-common.git", branch = "main" }
crownfi-cw-common = { git = "ssh://git@github.com/Crownfi/crownfi-sei-common.git", branch = "aritzcracker-less-inefficient-cosmwasm-api" }
sei-cosmwasm = "0.4"

# Potentially deprecated
uint = "0.9" # cosmwasm-std already provides U256/U512 types?
integer-sqrt = "0.1" # cosmwasm-std already provides this?

# CLI tools
bpaf = "0.9"
color-eyre = "0.6" 

# Testing stuff
cw-multi-test = "0.20"
anyhow = "1"
prost = "0.12"

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
strip = true
