[package]
name = "crownfi-astro-factory"
version = "1.6.0"
authors = ["Aritz Beobide-Cardinal <aritz@crownfi.io>", "Astroport"]
edition = "2021"
description = "Astroport factory contract - pair contract generator and directory"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = {workspace = true}
crownfi-astro-common = { path = "../../packages/cargo/crownfi-astro-common", default-features = false }
cw-storage-plus = {workspace = true}
cw2 = {workspace = true}
thiserror = {workspace = true}
itertools = {workspace = true}
cosmwasm-schema = {workspace = true}
cw-utils = {workspace = true}

[dev-dependencies]
cw-multi-test = {workspace = true}
crownfi-astro-token = { path = "../crownfi-astro-token" }
crownfi-astro-pair = { path = "../crownfi-astro-pair" }
cw20 = {workspace = true}
anyhow = {workspace = true}
prost = {workspace = true}
