[package]
name = "crownfi-astro-pair"
version = "1.4.0"
authors = ["Aritz Beobide-Cardinal <aritz@crownfi.io>", "Astroport"]
edition = "2021"
description = "The Astroport constant product pool contract implementation"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
integer-sqrt = {workspace = true}
crownfi-astro-common = { path = "../../packages/cargo/crownfi-astro-common", default-features = false }
cw2 = {workspace = true}
cw20 = {workspace = true}
cosmwasm-std = {workspace = true}
cw-storage-plus = {workspace = true}
thiserror = { version = "1.0" }
cosmwasm-schema = {workspace = true}
cw-utils = {workspace = true}

[dev-dependencies]
crownfi-astro-token = { path = "../crownfi-astro-token" }
crownfi-astro-factory = { path = "../crownfi-astro-factory" }
proptest = "1.0"
prost = "0.11.5"
cw-multi-test = "0.15"
