[package]
name = "crownfi-astro-router"
version = "1.1.2"
authors = ["Aritz Beobide-Cardinal <aritz@crownfi.io>", "Astroport"]
edition = "2021"
description = "The Astroport router contract - provides multi-hop swap functionality for Astroport pools"
license = "Apache-2.0"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = "0.15"
cw20 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
integer-sqrt = "0.1"
crownfi-astro-common = { path = "../../packages/cargo/crownfi-astro-common", default-features = false }
thiserror = { version = "1.0" }
cosmwasm-schema = "1.1"

[dev-dependencies]
crownfi-astro-factory = { path = "../crownfi-astro-factory" }
crownfi-astro-token = { path = "../crownfi-astro-token" }
crownfi-astro-pair = { path = "../crownfi-astro-pair" }
anyhow = "1.0"
cw-multi-test = "0.15"
