[package]
name = "crownfi-astro-token"
version = "1.1.1"
authors = ["Aritz Beobide-Cardinal <aritz@crownfi.io>", "Astroport"]
edition = "2021"
description = "Expanded implementation of a CosmWasm-20 compliant token for the Astroport ASTRO token"
license = "MIT"
repository = "https://github.com/CosmWasm/cosmwasm-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
crownfi-astro-common = { path = "../../packages/cargo/crownfi-astro-common", default-features = false }
cw2 = { workspace = true}
cw20 = { workspace = true}
cw20-base = { workspace = true, features = ["library"] }
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
