[package]
name = "crownfi-cw20-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
crownfi-astro-common = { path = "../../packages/cargo/crownfi-astro-common", default-features = false }
cw2 = { workspace = true }
cw20 = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cosmwasm-schema = { workspace = true }
thiserror = { workspace = true }
sei-cosmwasm = { workspace = true }
crownfi-cw-common = { workspace = true }
schemars = { workspace = true }
anyhow = "1.0"
base32 = "0.5.0"

[dev-dependencies]
cw-multi-test = "0.20.0"
