[package]
name = "crownfi-token-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cw2 = { workspace = true }
cw20 = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cosmwasm-schema = { workspace = true }
thiserror = { workspace = true }
sei-cosmwasm = { workspace = true }
crownfi-cw-common = { workspace = true }
schemars = { workspace = true }
anyhow = "1.0"
base64 = "0.22.1"
